--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
 .dl-horizontal dd {
   margin-left: 120px;
 }
-.infobutton {
+.problembutton {
   font-family: Georgia, serif;
   font-size: 2rem;
   line-height: 1rem;
@@ -16,6 +16,7 @@
   border: 2px solid #2e6da4;
   color: #FFF;
   text-align: center;
+  cursor: pointer;
 }
 .headerbutton {
   position: absolute;
@@ -46,4 +47,14 @@ dd > span, .col-md-5 > p > span {
 }
 .test {
   margin-left: 7.2%;
+}
+.alert {
+  position: absolute;
+  left: 40vw;
+  top: 1vh;
+  width: 38rem;
+  height: 5rem;
+  dline-height: 1.5rem;
+  margin-bottom: 0;
+  dz-index: -1;
 }
